--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>petere/sgml-spell-checker @ GitHub</title>
+	<title>SGML Spell-Checker</title>
 	
 	<style type="text/css">
 		body {
@@ -45,28 +45,51 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
       
-    <h1><a href="http://github.com/petere/sgml-spell-checker">sgml-spell-checker</a> 
+    <h1><a href="http://github.com/petere/sgml-spell-checker">SGML Spell-Checker</a> 
       <span class="small">by <a href="http://github.com/petere">petere</a></span></h1>
 
     <div class="description">
       SGML spell-checking package
     </div>
 
-    <p>This package includes a couple of tools that you can use to automatically spell-check your SGML (or XML) documents.</p><h2>Authors</h2>
-<p>Peter Eisentraut (peter_e@gmx.net)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Peter Eisentraut (peter_e@gmx.net)<br/>      </p>
+    <h2>Introduction</h2>
 
+    <p>This package includes a couple of tools that you can use to
+    automatically spell-check your SGML (or XML) documents. One of the
+    advantages of this tool over some other SGML-aware spell checkers
+    is that it scans your documents in the form in which the SGML
+    parser actually sees it, which means it is not line-based, system
+    entities are resolved, marked sections are treated appropriately,
+    etc.</p>
+
+    <p>Also, this tool can be made aware of particular DTDs, in the
+    sense that it knows not to spell-check the content of elements
+    that do not represent human-language text, such
+    as <code>&lt;programlisting&gt;</code>
+    in <a href="http://docbook.org">DocBook</a>. An exclusion list for
+    the DocBook DTD is included, others can be added trivially.</p>
+
+    <h2>Example</h2>
+
+    <p>The original motivation of this package was that I wanted a way
+    to spell-check
+    the <a href="http://developer.postgresql.org/docs/postgres/">PostgreSQL
+    documentation</a> automatically.  Right now, this program runs
+    regularly over the PostgreSQL documentation and makes
+    the <a href="http://developer.postgresql.org/docs/postgres/spell-check.txt">results</a>
+    available online.</p>
+
+    <h2>Contact</h2>
+    <p>Peter Eisentraut (peter_e@gmx.net)</p>
 
     <h2>Download</h2>
     <p>
-      You can download this project in either
-      <a href="http://github.com/petere/sgml-spell-checker/zipball/master">zip</a> or
-      <a href="http://github.com/petere/sgml-spell-checker/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/petere/sgml-spell-checker</pre>
+      You can download this project from
+      the <a href="http://github.com/petere/sgml-spell-checker/downloads">
+      download area</a>.  Look into the README file inside the tarball
+      for installation instructions.
+      A <a href="http://packages.debian.org/sgml-spell-checker">Debian
+      package</a> is also available.
     </p>
       
     <div class="footer">
